# requirements-hook

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  gen-requirements.sh  poetry.py  pyproject.toml  setup.cfg
gen_requirements/: poetry.py  requirements.py
requirements_hook/: cli.py  pipenv.py  poetry.py  requirements.py
tests/: test_pipenv.py
