[tool.poetry]
name = "requirements-hook"
version = "0.1.0"
description = "Generation of requirement files from Pipenv and Poetry"
authors = ["Pablo Torres <pablo.torres.t@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
requirements = "requirements_hook.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
